--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.7",
     "bootstrap-icons": "^1.11.1",
-    "next": "latest",
+    "next": "^13.5.4",
     "react": "latest",
     "react-dom": "latest",
-    "react-toastify": "^9.1.3"
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "latest",
